k8s/manifests/applications/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"keycloak","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"keycloak"}},"template":{"metadata":{"labels":{"app":"keycloak"}},"spec":{"containers":[{"args":["start-dev","--import-realm"],"env":[{"name":"DB_VENDOR","valueFrom":{"configMapKeyRef":{"key":"DB_VENDOR","name":"keycloak-realm-config"}}},{"name":"DB_ADDR","valueFrom":{"configMapKeyRef":{"key":"DB_ADDR","name":"keycloak-realm [...]
  creationTimestamp: "2025-08-06T08:28:11Z"
  generation: 4
  name: keycloak
  namespace: default
  resourceVersion: "583739"
  uid: 0758a9f9-a3a9-4791-90f3-f02558e75eb0
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: keycloak
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-06T11:36:03+01:00"
      creationTimestamp: null
      labels:
        app: keycloak
    spec:
      containers:
      - args:
        - start-dev
        - --import-realm
        image: quay.io/keycloak/keycloak:24.0.1
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/keycloak/data/import
          name: keycloak-realm
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: keycloak-realm-config
        name: keycloak-realm
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-08-19T08:29:33Z"
    lastUpdateTime: "2025-08-19T08:29:33Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-08-06T08:28:11Z"
    lastUpdateTime: "2025-08-19T10:20:08Z"
    message: ReplicaSet "keycloak-f757c6fc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
