k8s/manifests/applications/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: zakaria697/product-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: LoadBalancer
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
