k8s/manifests/applications/ingress-apis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apis-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  rules:
  - http:
      paths:
      - path: /product(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /order(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: order-service
            port:
              number: 8081
      - path: /inventory(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: inventory-service
            port:
              number: 8082
      - path: /notification(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notification-service
            port:
              number: 8085
