k8s/manifests/applications/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/inventory/$2
spec:
  rules:
    - http:
        paths:
          - path: /inventory(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-service
                port:
                  number: 8082
