k8s/manifests/applications/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/notification/$2
spec:
  rules:
    - http:
        paths:
          - path: /notification(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 8085
